[tool.poetry]
name = "dyco"
version = "1.1.2"
description = "Dynamic lag compensation"
authors = ["Lukas Hörtnagl <lukas.hoertnagl@usys.ethz.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
