[tool.poetry]
name = "dyco"
version = "2.0.0"
description = "Dynamic lag compensation"
authors = ["Lukas Hörtnagl <lukas.hoertnagl@usys.ethz.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = ">=2.2.1"
matplotlib = ">=3.8.3"
scipy = ">=1.12.0"
# deactivate next line during dev, activate only for production
#diive = ">=0.72.1"
# installation directly from source: diive = {url = "https://github.com/holukas/diive/archive/refs/tags/v0.71.2.tar.gz"}

[tool.poetry.group.dev.dependencies]
diive = { path = "../../21 - DIIVE/diive", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
